feat: CLIN-2484 fixed hardcoded i18n and removed tooltips  c7cf9c

--- a/src/index.css
+++ b/src/index.css
@@ -31,9 +31,17 @@ body {
   display:none;
 }
 
-.ant-form-item-label label {
+.ant-form-item-label label, .ant-form-item-label {
   pointer-events: none;
   .ant-form-item-tooltip, .ant-typography-secondary {
     pointer-events: all;
+  }
+}
+
+.ant-tree-node-content-wrapper{
+  &-tooltip {
+    img {
+      display: none;
+    }
   }
 }
